# MSTBx

./: .gitignore  CHANGELOG.md  GEMINI.md  GenMDMembConfg.py  GenMDSolConfg.py  GenMemb.py  GenSMDSolConfg.py  GenSol.py  GenSolSMD.py  GenWTMetaDSolConfg.py  MDTranslate.py  README.md  ResetPSF.py  mstbx.yml  pyproject.toml
AdHocTools/: AutoPSF.py  Findssbonds.py  MoveMols.py
DOCK/: MkcplxFromVina.py
DOCK/antechamber/: check_charge.sh  metodo1.mol2
Examples/1BBz-dimer-PMF/: 1bbz.cif  step1_pdbreader.psf
Examples/1oan-metad/: AUTORUN.sh  makePDBcolvars.tcl  step1_pdbreader.crd  step1_pdbreader.psf
Examples/1oan-pH7-glycan/: reset.psf
Examples/1oan-pH7-resetpsf/: new.psf  step1_pdbreader.psf
Examples/baat/: tyl_g.rtf
Examples/ubiquitin/: makerest.tcl  step1_pdbreader.psf  xplor.psf
LIB/: Utils.py
LIB/MDProtocols/: MDMembProtocol.py  MDSolProtocol.py
LIB/Utils/: Utils.py  __init__.py
SBx/: ColabfoldPipeline.py
SBx/results-debug/: _Fasta_example.a3m  _Fasta_example_scores_rank_004_alphafold2_ptm_model_2_seed_000.json  _Fasta_example_scores_rank_005_alphafold2_ptm_model_1_seed_000.json  _Fasta_example_template_domain_names.json  cite.bibtex  config.json  log.txt
docs/: Testing_Manual.md
mstbx/: cli.py
mstbx/commands/: autopsfgen.py  colabfold.py  md_inputs.py  md_translate.py  metad_inputs.py  mkdocking_cmplx.py  namdinputs.py  openmm_run.py  pdbwriter.py  resetpsf.py  smd_inputs.py  topopsfgen.py  topotleap.py
old.code/SBx/: ViewModels.py
testing/1oan-pH7-resetpsf/: HPC.sh  runner.sh
testing/aqp/: rest.tcl  runner.sh
tleap/6n6o/: sqm.in  (+10 more)
(+200 files in other folders)
