[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mstbx"
version = "0.8.9"
description = "Molecular Simulation ToolBox"
readme = "README.md"
authors = [{ name = "Ropón-Palacios G.", email = "georcki.ropon@unesp.br" }]
requires-python = ">=3.12"
dependencies = [
    "click",
    "biopython",
    "mdanalysis",
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "scipy",
    "statsmodels",
    "pdbfixer",
    "openmm",
    "colorama",
    "pdb2pqr",
]

[tool.setuptools]
packages = ["mstbx"]

[project.scripts]
mstbx = "mstbx.cli:cli"
